# plt_cpp_proj_template

./: CMakeLists.txt  dependencies.json
